[gd_scene load_steps=2 format=3 uid="uid://c8vqm8yvwknfb"]

[ext_resource type="Script" path="res://scripts/ui/DebugConsole.gd" id="1_debug"]

[node name="DebugConsole" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
script = ExtResource("1_debug")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "Debug Console (F1 to toggle)"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 0
text = "Close (F1)"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 1700.0
offset_bottom = 860.0

[node name="ButtonPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="TestSymbolsButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "1. Test Symbol Alphabet (20 symbols)"

[node name="TestTextsButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "2. Test All 5 Texts"

[node name="TestValidationButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "3. Test Validation Logic"

[node name="TestDictInitButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "4. Test Dictionary Initialization"

[node name="TestDictUpdateButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "5. Test Dictionary Updates"

[node name="TestConsistencyButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "6. Test Symbol Consistency"

[node name="Separator" type="HSeparator" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2

[node name="RunAllButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "â–¶ RUN ALL TESTS"
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)

[node name="Separator2" type="HSeparator" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2

[node name="TestGameStateButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "GameState: Test Initial Values"

[node name="TestGameStateAdvanceButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "GameState: Test Day Advancement"

[node name="TestGameStateCashButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "GameState: Test Cash Colors"

[node name="Separator3" type="HSeparator" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2

[node name="TestCustomerDataButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "CustomerData: Recurring Customers"

[node name="TestCustomerDataSchedulesButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "CustomerData: Appearance Schedules"

[node name="TestCustomerDataQueueButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "CustomerData: Queue Generation"

[node name="TestCustomerDataRelationshipsButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "CustomerData: Relationship Damage"

[node name="TestCustomerDataRandomButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "CustomerData: Random Customers"

[node name="Separator4" type="HSeparator" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2

[node name="LoadText1Button" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Translation: Load Text 1"

[node name="LoadText2Button" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Translation: Load Text 2"

[node name="LoadText5Button" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Translation: Load Text 5"

[node name="ResetTranslationButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Translation: Reset to Default"

[node name="TestSuccessFeedbackButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Feedback: Test Success"

[node name="TestFailureFeedbackButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Feedback: Test Failure"

[node name="DictionaryViewButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Dictionary: View Current State"

[node name="DictionaryUpdateButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Dictionary: Force Update"

[node name="Separator5" type="HSeparator" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2

[node name="ClearButton" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Clear Output"

[node name="OutputScroll" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputText" type="TextEdit" parent="HBoxContainer/OutputScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false
wrap_mode = 1

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestSymbolsButton" to="." method="_on_test_symbols_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestTextsButton" to="." method="_on_test_texts_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestValidationButton" to="." method="_on_test_validation_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestDictInitButton" to="." method="_on_test_dict_init_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestDictUpdateButton" to="." method="_on_test_dict_update_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestConsistencyButton" to="." method="_on_test_consistency_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/RunAllButton" to="." method="_on_run_all_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestGameStateButton" to="." method="_on_test_gamestate_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestGameStateAdvanceButton" to="." method="_on_test_gamestate_advance_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestGameStateCashButton" to="." method="_on_test_gamestate_cash_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestCustomerDataButton" to="." method="_on_test_customerdata_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestCustomerDataSchedulesButton" to="." method="_on_test_customerdata_schedules_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestCustomerDataQueueButton" to="." method="_on_test_customerdata_queue_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestCustomerDataRelationshipsButton" to="." method="_on_test_customerdata_relationships_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestCustomerDataRandomButton" to="." method="_on_test_customerdata_random_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/LoadText1Button" to="." method="_on_load_text1_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/LoadText2Button" to="." method="_on_load_text2_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/LoadText5Button" to="." method="_on_load_text5_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/ResetTranslationButton" to="." method="_on_reset_translation_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestSuccessFeedbackButton" to="." method="_on_test_success_feedback_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/TestFailureFeedbackButton" to="." method="_on_test_failure_feedback_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/DictionaryViewButton" to="." method="_on_dictionary_view_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/DictionaryUpdateButton" to="." method="_on_dictionary_update_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/ClearButton" to="." method="_on_clear_pressed"]
